--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stormy</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.6/marked.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -253,31 +256,169 @@
                 padding-bottom: max(1.5rem, env(safe-area-inset-bottom));
             }
         }
+/* Add these styles to your existing CSS */
+
+/* Message content styling */
+.message-content {
+    flex: 1;
+    line-height: 1.6;
+    overflow-wrap: break-word;
+}
+
+/* Code block styling */
+.message-content pre {
+    background-color: #1e1e1e;
+    border-radius: 6px;
+    padding: 1rem;
+    margin: 0.5rem 0;
+    position: relative;
+    overflow-x: auto;
+}
+
+.message-content code {
+    font-family: 'Menlo', 'Monaco', 'Courier New', monospace !important;
+    font-size: 0.875rem;
+}
+
+/* Inline code styling */
+.message-content :not(pre) > code {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+    font-size: 0.875em;
+}
+
+/* Copy button styling */
+.copy-button {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+    color: #fff;
+    font-size: 0.75rem;
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
+.copy-button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+/* Link styling */
+.message-content a {
+    color: #3291ff;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.message-content a:hover {
+    color: #1f75ff;
+    text-decoration: underline;
+}
+
+/* Markdown text formatting */
+.message-content strong {
+    color: #fff;
+    font-weight: 600;
+}
+
+.message-content em {
+    color: #d1d5db;
+    font-style: italic;
+}
+
+.message-content blockquote {
+    border-left: 3px solid var(--accent-color);
+    margin: 0.5rem 0;
+    padding-left: 1rem;
+    color: #d1d5db;
+}
+
+/* List styling */
+.message-content ul, 
+.message-content ol {
+    margin: 0.5rem 0;
+    padding-left: 1.5rem;
+}
+
+.message-content li {
+    margin: 0.25rem 0;
+}
+
+/* Table styling */
+.message-content table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 0.5rem 0;
+}
+
+.message-content th,
+.message-content td {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 0.5rem;
+    text-align: left;
+}
+
+.message-content th {
+    background-color: rgba(255, 255, 255, 0.05);
+}
+
+/* Highlight styling */
+.message-content mark {
+    background-color: rgba(255, 255, 0, 0.15);
+    color: inherit;
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+}
+        
     </style>
     <style>
         @keyframes spin {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+        .image-url-input {
+    width: 100%;
+    padding: 0.75rem;
+    background-color: transparent;
+    border: 1px solid var(--border-color);
+    border-radius: 6px;
+    color: var(--text-primary);
+    font-size: 0.875rem;
+    margin-top: 0.5rem;
+    display: none; /* Hidden by default */
+  }
     </style>
 </head>
 
 <body>
-    <div class="chat-container">
-        <div class="model-selector-container"> <select id="model-selector" class="model-dropdown">
-                <option value="gemini">Gemini 2.0 Flash</option>
-            </select>
-            <div class="api-key-container"> <input type="password" id="api-key-input" placeholder="Enter API Key"
-                    class="api-key-input"> <button id="save-key" class="save-key-btn">Save Key</button> </div>
+    <div class="model-selector-container"> 
+        <select id="model-selector" class="model-dropdown">
+          <option value="gpt4o">GPT4O (No API Key Required)</option>
+          <option value="gpt4omini">GPT4O Mini (No API Key Required)</option>
+          <option value="gemini_realtime">Gemini Realtime (No API Key Required)</option>
+          <option value="gemini">Gemini 1.5</option>
+          <option value="qwen">Qwen2.5-VL-72B-Instruction</option>
+        </select>
+        <div class="api-key-container"> 
+          <input type="password" id="api-key-input" placeholder="Enter API Key" class="api-key-input"> 
+          <button id="save-key" class="save-key-btn">Save Key</button> 
         </div>
+      </div>
         <div class="chat-messages" id="chat-messages"></div>
-        <div class="chat-input-container"> <textarea id="chat-input" placeholder="Ask me anything..."></textarea>
-            <button id="send-button">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M7 11L12 6L17 11M12 18V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
+        <div class="chat-input-container"> 
+            <textarea id="chat-input" placeholder="Ask me anything..."></textarea>
+            <input type="text" id="image-url-input" placeholder="Image URL" class="image-url-input" style="display: none;">
+            <button id="send-button"> 
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 11L12 6L17 11M12 18V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
             </button>
-    </div>
+          </div>
         <div class="avatar user-avatar">U</div>
         <div class="avatar bot-avatar">A</div>
         <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); color: white; text-align: center; justify-content: center; align-items: center; z-index: 1000;">
