--- a/index.html
+++ b/index.html
@@ -48,85 +48,52 @@
             position: relative;
         }
 
-        /* Model selector container */
-        .model-selector-container {
+        /* Chat input container */
+        .chat-input-container {
             position: fixed;
-            top: 0;
+            bottom: 0;
             left: 0;
-            width: 260px;
-            height: 100vh;
-            background-color: #202123;
-            padding: 1rem;
-            border-right: 1px solid var(--border-color);
+            right: 0;
+            padding: 1.5rem;
+            background-color: var(--background-primary);
+            border-top: 1px solid var(--border-color);
             display: flex;
-            flex-direction: column;
-            gap: 1rem;
+            gap: 0.75rem;
+            max-width: 1000px;
+            margin: 0 auto;
         }
 
-        /* Model dropdown */
+        /* Model dropdown in chat input */
         .model-dropdown {
-            width: 100%;
-            padding: 0.75rem;
+            position: absolute;
+            top: -30px;
+            right: 1.5rem;
             background-color: transparent;
             border: 1px solid var(--border-color);
-            border-radius: 6px;
-            color: var(--text-primary);
-            font-size: 0.875rem;
+            border-radius: 4px;
+            color: var(--text-secondary);
+            font-size: 0.7rem;
+            padding: 4px 8px;
             cursor: pointer;
-            transition: background-color 0.2s;
+            transition: all 0.2s;
         }
 
         .model-dropdown:hover {
             background-color: var(--background-hover);
-        }
-
-        /* API key container */
-        .api-key-container {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-            width: 100%;
-        }
-
-        /* API key input */
-        .api-key-input {
-            width: 100%;
-            padding: 0.75rem;
-            background-color: transparent;
-            border: 1px solid var(--border-color);
-            border-radius: 6px;
-            color: var(--text-primary);
-            font-size: 0.875rem;
-        }
-
-        .api-key-input:focus {
-            outline: none;
             border-color: var(--accent-color);
         }
 
-        /* Save key button */
-        .save-key-btn {
-            width: 100%;
-            padding: 0.75rem;
-            background-color: var(--accent-color);
-            color: #000;
-            border: none;
-            border-radius: 6px;
-            font-size: 0.875rem;
-            font-weight: 500;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-
-        .save-key-btn:hover {
-            background-color: #1a8f5c;
+        .model-dropdown:focus {
+            outline: none;
+            border-color: var(--accent-color);
         }
 
         /* Chat messages container */
         .chat-messages {
             flex: 1;
             overflow-y: auto;
-            padding-left: 260px; /* Width of the sidebar */
+            padding: 1rem;
+            padding-bottom: 100px;
             scroll-behavior: smooth;
         }
 
@@ -164,21 +131,6 @@
 
         .bot-avatar {
             background-color: var(--accent-color);
-        }
-
-        /* Chat input container */
-        .chat-input-container {
-            position: fixed;
-            bottom: 0;
-            left: 260px;
-            right: 0;
-            padding: 1.5rem;
-            background-color: var(--background-primary);
-            border-top: 1px solid var(--border-color);
-            display: flex;
-            gap: 0.75rem;
-            max-width: calc(1000px - 260px);
-            margin: 0 auto;
         }
 
         /* Chat input textarea */
@@ -220,14 +172,6 @@
 
         /* Mobile styles */
         @media (max-width: 768px) {
-            .model-selector-container {
-                display: none; /* Hide sidebar on mobile */
-            }
-
-            .chat-messages {
-                padding-left: 0;
-            }
-
             .chat-input-container {
                 left: 0;
                 max-width: 100%;
@@ -256,123 +200,122 @@
                 padding-bottom: max(1.5rem, env(safe-area-inset-bottom));
             }
         }
-/* Add these styles to your existing CSS */
 
-/* Message content styling */
-.message-content {
-    flex: 1;
-    line-height: 1.6;
-    overflow-wrap: break-word;
-}
+        /* Message content styling */
+        .message-content {
+            flex: 1;
+            line-height: 1.6;
+            overflow-wrap: break-word;
+        }
 
-/* Code block styling */
-.message-content pre {
-    background-color: #1e1e1e;
-    border-radius: 6px;
-    padding: 1rem;
-    margin: 0.5rem 0;
-    position: relative;
-    overflow-x: auto;
-}
+        /* Code block styling */
+        .message-content pre {
+            background-color: #1e1e1e;
+            border-radius: 6px;
+            padding: 1rem;
+            margin: 0.5rem 0;
+            position: relative;
+            overflow-x: auto;
+        }
 
-.message-content code {
-    font-family: 'Menlo', 'Monaco', 'Courier New', monospace !important;
-    font-size: 0.875rem;
-}
+        .message-content code {
+            font-family: 'Menlo', 'Monaco', 'Courier New', monospace !important;
+            font-size: 0.875rem;
+        }
 
-/* Inline code styling */
-.message-content :not(pre) > code {
-    background-color: rgba(255, 255, 255, 0.1);
-    padding: 0.2em 0.4em;
-    border-radius: 3px;
-    font-size: 0.875em;
-}
+        /* Inline code styling */
+        .message-content :not(pre) > code {
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 0.2em 0.4em;
+            border-radius: 3px;
+            font-size: 0.875em;
+        }
 
-/* Copy button styling */
-.copy-button {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    padding: 0.25rem 0.5rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 4px;
-    color: #fff;
-    font-size: 0.75rem;
-    cursor: pointer;
-    transition: background-color 0.2s;
-}
+        /* Copy button styling */
+        .copy-button {
+            position: absolute;
+            top: 0.5rem;
+            right: 0.5rem;
+            padding: 0.25rem 0.5rem;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 4px;
+            color: #fff;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
 
-.copy-button:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-}
+        .copy-button:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
 
-/* Link styling */
-.message-content a {
-    color: #3291ff;
-    text-decoration: none;
-    transition: color 0.2s;
-}
+        /* Link styling */
+        .message-content a {
+            color: #3291ff;
+            text-decoration: none;
+            transition: color 0.2s;
+        }
 
-.message-content a:hover {
-    color: #1f75ff;
-    text-decoration: underline;
-}
+        .message-content a:hover {
+            color: #1f75ff;
+            text-decoration: underline;
+        }
 
-/* Markdown text formatting */
-.message-content strong {
-    color: #fff;
-    font-weight: 600;
-}
+        /* Markdown text formatting */
+        .message-content strong {
+            color: #fff;
+            font-weight: 600;
+        }
 
-.message-content em {
-    color: #d1d5db;
-    font-style: italic;
-}
+        .message-content em {
+            color: #d1d5db;
+            font-style: italic;
+        }
 
-.message-content blockquote {
-    border-left: 3px solid var(--accent-color);
-    margin: 0.5rem 0;
-    padding-left: 1rem;
-    color: #d1d5db;
-}
+        .message-content blockquote {
+            border-left: 3px solid var(--accent-color);
+            margin: 0.5rem 0;
+            padding-left: 1rem;
+            color: #d1d5db;
+        }
 
-/* List styling */
-.message-content ul, 
-.message-content ol {
-    margin: 0.5rem 0;
-    padding-left: 1.5rem;
-}
+        /* List styling */
+        .message-content ul, 
+        .message-content ol {
+            margin: 0.5rem 0;
+            padding-left: 1.5rem;
+        }
 
-.message-content li {
-    margin: 0.25rem 0;
-}
+        .message-content li {
+            margin: 0.25rem 0;
+        }
 
-/* Table styling */
-.message-content table {
-    border-collapse: collapse;
-    width: 100%;
-    margin: 0.5rem 0;
-}
+        /* Table styling */
+        .message-content table {
+            border-collapse: collapse;
+            width: 100%;
+            margin: 0.5rem 0;
+        }
 
-.message-content th,
-.message-content td {
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 0.5rem;
-    text-align: left;
-}
+        .message-content th,
+        .message-content td {
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 0.5rem;
+            text-align: left;
+        }
 
-.message-content th {
-    background-color: rgba(255, 255, 255, 0.05);
-}
+        .message-content th {
+            background-color: rgba(255, 255, 255, 0.05);
+        }
 
-/* Highlight styling */
-.message-content mark {
-    background-color: rgba(255, 255, 0, 0.15);
-    color: inherit;
-    padding: 0.2em 0.4em;
-    border-radius: 3px;
-}
+        /* Highlight styling */
+        .message-content mark {
+            background-color: rgba(255, 255, 0, 0.15);
+            color: inherit;
+            padding: 0.2em 0.4em;
+            border-radius: 3px;
+        }
         
     </style>
     <style>
@@ -396,37 +339,32 @@
 </head>
 
 <body>
-    <div class="model-selector-container"> 
-        <select id="model-selector" class="model-dropdown">
-          <option value="gpt4o">GPT4O (No API Key Required)</option>
-          <option value="gpt4omini">GPT4O Mini (No API Key Required)</option>
-          <option value="gemini_realtime">Gemini Realtime (No API Key Required)</option>
-          <option value="gemini">Gemini 1.5</option>
-          <option value="qwen">Qwen2.5-VL-72B-Instruction</option>
-        </select>
-        <div class="api-key-container"> 
-          <input type="password" id="api-key-input" placeholder="Enter API Key" class="api-key-input"> 
-          <button id="save-key" class="save-key-btn">Save Key</button> 
-        </div>
-      </div>
-        <div class="chat-messages" id="chat-messages"></div>
-        <div class="chat-input-container"> 
-            <textarea id="chat-input" placeholder="Ask me anything..."></textarea>
-            <input type="text" id="image-url-input" placeholder="Image URL" class="image-url-input" style="display: none;">
-            <button id="send-button"> 
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M7 11L12 6L17 11M12 18V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
+    <div class="chat-container">
+        <div id="chat-messages" class="chat-messages"></div>
+        <div class="chat-input-container">
+            <select id="model-selector" class="model-dropdown">
+                <option value="gpt4o">GPT-4 Turbo</option>
+                <option value="gpt4omini">GPT-4</option>
+                <option value="gemini_realtime">Gemini Pro</option>
+                <option value="qwen">Qwen 72B</option>
+            </select>
+            <textarea id="chat-input" placeholder="Type your message..." rows="1"></textarea>
+            <input type="text" id="image-url-input" class="image-url-input" placeholder="Enter image URL (optional)">
+            <button id="send-button">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.01 21L23 12L2.01 3M12 18V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
             </button>
-          </div>
-        <div class="avatar user-avatar">U</div>
-        <div class="avatar bot-avatar">A</div>
-        <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); color: white; text-align: center; justify-content: center; align-items: center; z-index: 1000;">
-            <div>
-                <h2>AI is thinking...</h2>
-                <div class="spinner" style="margin: auto; border: 16px solid #f3f3f3; border-top: 16px solid #3498db; border-radius: 50%; width: 50px; height: 50px; animation: spin 2s linear infinite;"></div>
-            </div>
         </div>
+    </div>
+    <div class="avatar user-avatar">U</div>
+    <div class="avatar bot-avatar">A</div>
+    <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); color: white; text-align: center; justify-content: center; align-items: center; z-index: 1000;">
+        <div>
+            <h2>AI is thinking...</h2>
+            <div class="spinner" style="margin: auto; border: 16px solid #f3f3f3; border-top: 16px solid #3498db; border-radius: 50%; width: 50px; height: 50px; animation: spin 2s linear infinite;"></div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 
