--- a/index.html
+++ b/index.html
@@ -317,13 +317,64 @@
             border-radius: 3px;
         }
         
-    </style>
-    <style>
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        .loading-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
         }
 
+        .chat-message {
+            margin: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .download-options {
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            margin-top: 8px;
+            margin-bottom: 8px;
+            padding: 10px;
+            background: #2c2c2c;
+            border-radius: 4px;
+        }
+
+        #quality-selector {
+            flex: 1;
+            min-width: 150px;
+            background: #1e1e1e;
+            color: #fff;
+            border: 1px solid #3c3c3c;
+            padding: 8px 12px;
+            border-radius: 4px;
+            margin-right: 10px;
+        }
+
+        .download-button {
+            background: #4CAF50;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-weight: 500;
+            white-space: nowrap;
+        }
+
+        .download-button:hover {
+            background: #45a049;
+        }
+        
         .image-url-input {
     width: 100%;
     padding: 0.75rem;
@@ -336,6 +387,12 @@
     display: none; /* Hidden by default */
   }
     </style>
+    <style>
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 
 <body>
@@ -343,22 +400,20 @@
         <div id="chat-messages" class="chat-messages"></div>
         <div class="chat-input-container">
             <select id="model-selector" class="model-dropdown">
+                <option value="gemini_flash">Gemini 2.0 Flash</option>
+                <option value="gemini_realtime">Gemini Realtime</option>
                 <option value="gpt4o">GPT-4 Turbo</option>
                 <option value="gpt4omini">GPT-4</option>
-                <option value="gemini_realtime">Gemini Pro</option>
-                <option value="qwen">Qwen 72B</option>
             </select>
             <textarea id="chat-input" placeholder="Type your message..." rows="1"></textarea>
             <input type="text" id="image-url-input" class="image-url-input" placeholder="Enter image URL (optional)">
             <button id="send-button">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M2.01 21L23 12L2.01 3M12 18V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M2.01 21L23 12L2.01 3L2 10L17 12L2 14L2.01 21Z" fill="currentColor"/>
                 </svg>
             </button>
         </div>
     </div>
-    <div class="avatar user-avatar">U</div>
-    <div class="avatar bot-avatar">A</div>
     <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); color: white; text-align: center; justify-content: center; align-items: center; z-index: 1000;">
         <div>
             <h2>AI is thinking...</h2>
