--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             display: flex;
             gap: 0.75rem;
             max-width: 1000px;
+            justify-content: center;
             margin: 0 auto;
         }
 
@@ -147,6 +148,7 @@
             min-height: 44px;
             max-height: 200px;
             line-height: 1.5;
+            justify-content: center;
         }
 
         #chat-input:focus {
