--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
+            font-family: 'Poppins', sans-serif !important;
+        }
+
+        * {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
@@ -328,9 +332,6 @@
             justify-content: center;
             align-items: center;
             z-index: 1000;
-            display: flex;
-            justify-content: center;
-            align-items: center;
         }
 
         .chat-message {
