--- a/index.html
+++ b/index.html
@@ -321,19 +321,6 @@
             border-radius: 3px;
         }
         
-        .loading-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-
         .chat-message {
             margin: 10px;
             padding: 10px;
@@ -398,22 +385,6 @@
         }
     </style>
     <style>
-        /* Loading overlay styles */
-        #loadingOverlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(4px);
-            -webkit-backdrop-filter: blur(4px);
-            display: none;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-
         /* Style selector styles */
         .style-selector {
             display: grid;
@@ -566,21 +537,6 @@
             outline: none;
             align-self: center;
         }
-
-        /* Loading overlay styles */
-        .loading-overlay {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-        }
-
         /* Send button styles */
         #send-button {
             width: 36px;
@@ -675,6 +631,7 @@
                 <option value="claude_sonnet">Claude Sonnet</option>
                 <option value="mixtral">Mixtral</option>
                 <option value="llama3">Llama 3 70B</option>
+                <option value="gemma">Gemma</option>
             </select>
             <textarea id="chat-input" placeholder="Type your message..." rows="1"></textarea>
             <input type="text" id="image-url-input" class="image-url-input" placeholder="Enter image URL (optional)">
@@ -686,12 +643,59 @@
             </button>
         </div>
     </div>
-    <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); color: white; text-align: center; justify-content: center; align-items: center; z-index: 1000;">
-        <div>
-            <h2>AI is thinking...</h2>
-            <div class="spinner" style="margin: auto; border: 16px solid #f3f3f3; border-top: 16px solid #3498db; border-radius: 50%; width: 50px; height: 50px; animation: spin 2s linear infinite;"></div>
-        </div>
+    <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+    background: linear-gradient(135deg, rgba(0,0,0,0.7), rgba(0,0,0,0.5)); 
+    color: white; text-align: center; justify-content: center; align-items: center; 
+    z-index: 1000; flex-direction: column; backdrop-filter: blur(5px);">
+
+    <div class="spinner-container" style="margin-top: 20px; width: 100px; height: 100px; position: relative;">
+        <div class="spinner"></div>
+        <div class="spinner1"></div>
     </div>
+</div>
+
+<style>
+/* Spinner animation */
+.spinner {
+  background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
+  width: 100px;
+  height: 100px;
+  animation: spinning82341 1.7s linear infinite;
+  text-align: center;
+  border-radius: 50px;
+  filter: blur(1px);
+  box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+}
+
+.spinner1 {
+  background-color: rgb(36, 36, 36);
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  filter: blur(10px);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes spinning82341 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+</style>
+
+<script>
+function showLoading() {
+    document.getElementById("loadingOverlay").style.display = "flex";
+    document.documentElement.style.cursor = "wait";
+}
+
+function hideLoading() {
+    document.getElementById("loadingOverlay").style.display = "none";
+    document.documentElement.style.cursor = "default";
+}
+</script>
     <script src="app.js"></script>
 </body>
 
