--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stormy AI Assistant</title>
+    <title>Stormy</title>
     <link rel="icon" type="image/x-icon" href="stormy.jpg">
-    <link rel="stylesheet" href="styles.css">
-    <!-- External Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/github-dark.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/9.1.6/marked.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -622,62 +620,82 @@
 </head>
 
 <body>
-    <!-- Toolbar -->
-    <div class="toolbar">
-        <a href="/" class="toolbar-brand">
-            <img src="stormy.jpg" alt="Stormy" class="toolbar-logo">
-            <span class="toolbar-title">Stormy</span>
-        </a>
-    </div>
-
-    <!-- Main Chat Container -->
-    <div id="chat-container">
-        <div id="chat-messages"></div>
+    <div class="chat-container">
+        <div id="chat-messages" class="chat-messages"></div>
         <div class="chat-input-container">
-            <div class="chat-input-wrapper">
-                <button id="mic-button" class="mic-button">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/>
-                        <path d="M19 10v2a7 7 0 0 1-14 0v-2"/>
-                        <line x1="12" y1="19" x2="12" y2="23"/>
-                        <line x1="8" y1="23" x2="16" y2="23"/>
-                    </svg>
-                </button>
-                <textarea id="chat-input" placeholder="Type a message..." rows="1"></textarea>
-                <button id="send-button">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <line x1="22" y1="2" x2="11" y2="13"/>
-                        <polygon points="22 2 15 22 11 13 2 9 22 2"/>
-                    </svg>
-                </button>
-            </div>
-            <div class="model-selector-container">
-                <select id="model-selector" class="model-dropdown">
-                    <option value="gemini_flash">Gemini Flash</option>
-                    <option value="claude_sonnet">Claude Sonnet</option>
-                    <option value="mixtral">Mixtral</option>
-                    <option value="llama3">Llama 3</option>
-                    <option value="qwen2_coder">Qwen2 Coder</option>
-                    <option value="gemma">Gemma</option>
-                    <option value="llama3_70b">Llama 3 70B</option>
-                    <option value="qwen2">Qwen2</option>
-                    <option value="gpt4o">GPT-4 Optimized</option>
-                    <option value="gpt4omini">GPT-4 Mini</option>
-                </select>
-            </div>
+            <select id="model-selector" class="model-dropdown">
+                <option value="gemini_flash">Gemini Flash</option>
+                <option value="gpt4o">GPT-4 Optimized</option>
+                <option value="gpt4omini">GPT-4 Mini</option>
+                <option value="gemini_realtime">Gemini Realtime</option>
+                <option value="claude_sonnet">Claude Sonnet</option>
+                <option value="mixtral">Mixtral</option>
+                <option value="llama3">Llama 3 70B</option>
+                <option value="gemma">Gemma</option>
+            </select>
+            <textarea id="chat-input" placeholder="Type your message..." rows="1"></textarea>
+            <input type="text" id="image-url-input" class="image-url-input" placeholder="Enter image URL (optional)">
+            <div id="mic-status" style="display: none; position: absolute; bottom: 100%; left: 50%; transform: translateX(-50%); background: var(--accent-color); color: white; padding: 4px 12px; border-radius: 12px; font-size: 12px; margin-bottom: 8px;">Microphone Active</div>
+            <button id="send-button">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.01 21L23 12L2.01 3L2 10L17 12L2 14L2.01 21Z" fill="currentColor"/>
+                </svg>
+            </button>
         </div>
     </div>
+    <div id="loadingOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+    background: linear-gradient(135deg, rgba(0,0,0,0.7), rgba(0,0,0,0.5)); 
+    color: white; text-align: center; justify-content: center; align-items: center; 
+    z-index: 1000; flex-direction: column; backdrop-filter: blur(5px);">
 
-    <!-- Overlays -->
-    <div id="loadingOverlay">
-        <div class="loading-spinner"></div>
+    <div class="spinner-container" style="margin-top: 20px; width: 100px; height: 100px; position: relative;">
+        <div class="spinner"></div>
+        <div class="spinner1"></div>
     </div>
-    <div id="mic-status" class="mic-status"></div>
-    <div class="image-modal">
-        <img class="modal-image" src="" alt="Full size image">
-    </div>
+</div>
 
-    <!-- Scripts -->
+<style>
+/* Spinner animation */
+.spinner {
+  background-image: linear-gradient(rgb(186, 66, 255) 35%, rgb(0, 225, 255));
+  width: 100px;
+  height: 100px;
+  animation: spinning82341 1.7s linear infinite;
+  text-align: center;
+  border-radius: 50px;
+  filter: blur(1px);
+  box-shadow: 0px -5px 20px 0px rgb(186, 66, 255), 0px 5px 20px 0px rgb(0, 225, 255);
+}
+
+.spinner1 {
+  background-color: rgb(36, 36, 36);
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  filter: blur(10px);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+@keyframes spinning82341 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+</style>
+
+<script>
+function showLoading() {
+    document.getElementById("loadingOverlay").style.display = "flex";
+    document.documentElement.style.cursor = "wait";
+}
+
+function hideLoading() {
+    document.getElementById("loadingOverlay").style.display = "none";
+    document.documentElement.style.cursor = "default";
+}
+</script>
     <script src="app.js"></script>
 </body>
 
